added additional tests for validation